--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^5.0.0-alpha.2"
+		"express": "^5.0.0-alpha.2",
+		"express-babelify-middleware": "^0.2.1",
+		"babel-preset-es2015": "^6.9.0"
 	},
 	"engines": {
 		"node": "4.4.3"
